tests/resource/valid/operation/multiply_other_int.mamba
class MyClass(def a: Int)
    def f(self, other: MyClass) -> Int => self.a * other.a

def a := MyClass(10)
def b := MyClass(20)

a.f(b)
