tests/resource/invalid/type/definition/assign_to_inner_non_mut3.mamba
class A
    def c: C

class C
    def fin my_class: D := D()
    def my_field_accessor(self) -> D => self.my_class

class D
    def my_field: Int := 10

def a := A()
a.c.my_field_accessor().my_field := 20
